app/iam/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iam
  namespace: app
spec:
  selector:
    matchLabels:
      app: iam
  template:
    metadata:
      labels:
        app: iam
    spec:
      containers:
      - name: keycloak-iam
        image: keycloak/keycloak:21.0
        args:
          - "start-dev"
        resources:
          limits:
            memory: '1Gi'
            cpu: '500m'
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
