app/iam/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iam-service
  namespace: app
spec:
  type: ClusterIP
  selector:
    app: iam
  ports:
  - name: http
    port: 80
    targetPort: 8080
  - name: https
    port: 443
    targetPort: 8443
