app/iam/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iam-ingress
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    kubernetes.io/ingress.class: 'nginx'
spec:
  rules:
    - host: www.iam.195063.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: iam-service
                port:
                  number: 80
